# MaidSpace

./: .gitignore  MaidSpace-Fallback.cmd  MaidSpace.cmd  README.md  S.R.C-ADD.cmd  Setup-MaidSpace.cmd  package-lock.json  package.json  server.js
data/: add-file-knowledge.json
docs/: ARCHITECTURE.md  MAIDSPACE_RESEARCH.md
public/: app.js  index.html  styles.css
scripts/: maidspace-build.ps1  setup-maidspace.ps1
src/: report.js
src-core/add-core/: Cargo.toml
src-core/add-core/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/add/: analyzer.js  fileKnowledge.js
src/alc/: preferences.js  state.js
src/are/: planner.js
src/desktop/: launcher.js
src/scan/: fastInventory.js
tests/: add.test.js
