[package]
name = "src-add"
version = "0.1.0"
description = "Interface local do S.R.C A.D.D"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
add-core = { path = "../src-core/add-core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
